<resources>
    <string name="app_name">furniture</string>

    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_loading">Loading…</string>
    <string name="preference_name">furniture_pref</string>
    <string name="msg_token_expired">Token Expired</string>
    <string name="msg_has_error">Has Error</string>
    <string name="text_sign_in">Sign In</string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="text_forgot">Forgot Password</string>
    <string name="text_reset_password">Reset Password</string>
    <string name="text_create_account">Create Account</string>
    <string name="text_not_registered">Not registered yet?</string>
    <string name="text_phone_number">Phone Number</string>
    <string name="text_already_register">Already Registered?</string>
    <string name="text_send_SMS">Send SMS</string>
    <string name="text_enter_new_password">Enter a new password</string>
    <string name="text_forgot_description">Enter your phone number below. We will send you an SMS with a pin code to confirm your identity.</string>
    <string name="text_new_password">New Password</string>
    <string name="text_re_enter_password">Re-enter Password</string>
    <string name="text_enter_pin">Enter the pin code sent to your mobile phone</string>
    <string name="text_did_not_receive_otp">Did not receive OTP?</string>
    <string name="text_resend_otp">Resend</string>
    <string name="text_confirm">Confirm</string>
    <string name="text_login">Login</string>

    <string name="network_unavailable">Network Unavailable</string>
    <string name="user_exist">User is exist or email is not available</string>
    <string name="name_required">Username is required</string>
    <string name="phone_required">Phone number is required</string>
    <string name="email_required">Email is required</string>
    <string name="pass_than_8">Password must be than 8 character</string>
    <string name="pass_not_match">Password do not match</string>
    <string name="pass_required">Password is required</string>
    <string name="pass_must_has_upper">Password must required uppercase letters</string>
    <string name="pass_must_has_lower">Password must required lowercase letters</string>
    <string name="pass_must_has_number">Password must required numbers</string>
    <string name="pass_must_has_special_char">Password must required special character</string>
    <string name="pass_not_has_special_char">Password must required special character</string>
    <string name="reset_pass_success">Password reset successfully</string>
    <string name="email_pass_wrong">Email or Password is wrong</string>
    <string name="login_success">Login Successfully</string>
    <string name="register_success">Register Successfully</string>
    <string name="pls_enter_phone_number">Please enter your phone number!</string>
    <string name="pls_enter_otp">Please enter OTP!</string>
    <string name="title_home">Home</string>
    <string name="add_cart">Add To Cart</string>
    <string name="empty_cart">Cart is empty</string>
    <string name="more_variants">More variants</string>
    <string name="description">Description</string>
    <string name="products_left">Products left</string>
    <string name="order_history">Order History</string>
    <string name="change_pass">Change Password</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="privacy">Privacy Policy</string>
    <string name="text_get_started">Get started</string>
    <string name="place_api_key">AIzaSyAYd90-Md_0kHs89KLI84Qr8EJoggAs6Y0</string>


</resources>