<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_48"
            android:text="@string/text_create_account"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/edtUsername"
            app:layout_constraintStart_toStartOf="@+id/edtUsername" />

        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_edit_text_height"
            android:layout_marginHorizontal="@dimen/normal_margin"
            android:backgroundTint="@color/gray"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="@dimen/space_12"
            android:hint="@string/text_username"
            android:textColorHint="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <EditText
            android:id="@+id/edtPhone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_edit_text_height"
            android:layout_marginHorizontal="@dimen/normal_margin"
            android:layout_marginTop="@dimen/space_30"
            android:backgroundTint="@color/gray"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="@dimen/space_12"
            android:hint="@string/text_phone_number"
            android:textColorHint="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtUsername" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_edit_text_height"
            android:layout_marginHorizontal="@dimen/normal_margin"
            android:layout_marginTop="@dimen/space_30"
            android:backgroundTint="@color/gray"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="@dimen/space_12"
            android:hint="@string/text_password"
            android:inputType="textPassword"
            android:textColorHint="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtPhone" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="@dimen/large_button_height"
            android:layout_marginHorizontal="@dimen/normal_margin"
            android:layout_marginTop="@dimen/space_160"
            android:background="@drawable/bg_button"
            android:text="@string/text_create_account"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_48"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/btnCreateAccount"
            app:layout_constraintStart_toStartOf="@+id/btnCreateAccount"
            app:layout_constraintTop_toBottomOf="@+id/btnCreateAccount">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_already_register"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txtSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_space"
                android:text="@string/text_sign_in"
                android:textColor="@color/teal_100"
                android:textSize="12sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>