<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_48"
        android:background="@drawable/img_forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginTop="@dimen/space_14"
        android:background="@drawable/ic_back"
        app:layout_constraintEnd_toStartOf="@+id/imgForgot"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgForgot" />

    <TextView
        android:id="@+id/txtForgotPassword"
        style="@style/TextBold32"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginTop="@dimen/space_48"
        android:text="@string/text_forgot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgForgot" />

    <TextView
        android:id="@+id/txtDescription"
        style="@style/TextBold14"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@dimen/normal_margin"
        android:layout_marginTop="@dimen/large_space"
        android:text="@string/text_forgot_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtForgotPassword" />

    <EditText
        android:id="@+id/edtPhoneNumber"
        style="@style/NormalEditText"
        android:layout_marginHorizontal="@dimen/normal_margin"
        android:layout_marginTop="@dimen/big_space"
        android:drawableStart="@drawable/ic_phone"
        android:hint="@string/text_phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescription" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSendSMS"
        style="@style/BlueButton"
        android:layout_marginHorizontal="@dimen/normal_margin"
        android:layout_marginTop="@dimen/xlarge_space"
        android:background="@drawable/bg_button"
        android:text="@string/text_send_SMS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPhoneNumber" />
</androidx.constraintlayout.widget.ConstraintLayout>