<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_48"
        android:background="@drawable/img_forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginTop="@dimen/space_14"
        android:src="@drawable/ic_back"
        app:layout_constraintEnd_toStartOf="@+id/imgForgot"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgForgot" />

    <TextView
        android:id="@+id/txtResetPassword"
        style="@style/TextBold32"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginTop="@dimen/space_48"
        android:text="@string/text_reset_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgForgot" />

    <TextView
        android:id="@+id/txtDescription"
        style="@style/TextBold14"
        android:layout_marginHorizontal="@dimen/normal_margin"
        android:layout_marginTop="@dimen/space_14"
        android:text="@string/text_enter_new_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtResetPassword" />

    <EditText
        android:id="@+id/edtNewPassword"
        style="@style/NormalEditText"
        android:layout_marginHorizontal="@dimen/normal_margin"
        android:layout_marginTop="@dimen/xlarge_space"
        android:drawableStart="@drawable/ic_lock"
        android:hint="@string/text_new_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescription" />

    <EditText
        android:id="@+id/edtReEnterPassword"
        style="@style/NormalEditText"
        android:layout_marginHorizontal="@dimen/normal_margin"
        android:layout_marginTop="@dimen/space_30"
        android:drawableStart="@drawable/ic_lock"
        android:hint="@string/text_re_enter_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNewPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnResetPassword"
        style="@style/BlueButton"
        android:layout_marginHorizontal="@dimen/normal_margin"
        android:text="@string/text_reset_password"
        android:layout_marginTop="@dimen/big_space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtReEnterPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>