<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_48"
            android:text="@string/text_sign_in"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/edtUsername"
            app:layout_constraintStart_toStartOf="@+id/edtUsername" />

        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="@dimen/normal_margin"
            android:layout_height="@dimen/normal_edit_text_height"
            android:backgroundTint="@color/gray"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="@dimen/space_12"
            android:hint="@string/text_username"
            android:textColorHint="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_edit_text_height"
            android:layout_marginHorizontal="@dimen/normal_margin"
            android:layout_marginTop="@dimen/space_30"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="@dimen/space_12"
            android:hint="@string/text_password"
            android:inputType="textPassword"
            android:textColorHint="@color/gray"
            android:backgroundTint="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtUsername" />

        <TextView
            android:id="@+id/txtForgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_14"
            android:layout_marginEnd="@dimen/space_14"
            android:text="@string/text_forgot"
            android:textColor="@color/teal_100"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/edtPassword"
            app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/large_button_height"
            android:layout_marginHorizontal="@dimen/normal_margin"
            android:layout_marginTop="@dimen/space_200"
            android:background="@drawable/bg_button"
            android:text="@string/text_sign_in"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/larger_space"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/btnSignIn"
            app:layout_constraintStart_toStartOf="@+id/btnSignIn"
            app:layout_constraintTop_toBottomOf="@+id/btnSignIn">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_not_registered"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txtCreateAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_space"
                android:text="@string/text_create_account"
                android:textColor="@color/teal_100"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/normal_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <ImageView
                android:id="@+id/imgGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_48"
                android:background="@drawable/ic_google" />

            <ImageView
                android:id="@+id/imgFacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_facebook" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>