<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/space_14"
        android:layout_marginTop="@dimen/space_14">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_80"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/small_space">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivAvatar"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="@drawable/ic_default_avatar"
                android:layout_marginEnd="@dimen/space_14"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">
                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Your name"
                    style="@style/TextBold26"/>
                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="yourmail@gmail.com"
                    style="@style/TextRegular14"/>
            </LinearLayout>

        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:id="@+id/cvOrderHistory"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_56"
            android:layout_marginVertical="@dimen/small_space">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/space_30"
                    android:layout_height="@dimen/space_30"
                    android:background="@drawable/ic_order_history"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/space_14"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/order_history"
                    style="@style/TextBold18"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cvChangePassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_56"
            android:layout_marginVertical="@dimen/small_space">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/space_30"
                    android:layout_height="@dimen/space_30"
                    android:background="@drawable/ic_reset_pass"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/space_14"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/change_pass"
                    style="@style/TextBold18"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Quick Link"
            style="@style/TextRegular16"
            android:layout_marginVertical="@dimen/normal_space"/>
        <androidx.cardview.widget.CardView
            android:id="@+id/cvAboutUs"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_56"
            android:layout_marginVertical="@dimen/small_space">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/space_30"
                    android:layout_height="@dimen/space_30"
                    android:background="@drawable/ic_about_us"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/space_14"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/about_us"
                    style="@style/TextBold18"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvContactUs"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_56"
            android:layout_marginVertical="@dimen/small_space">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/space_30"
                    android:layout_height="@dimen/space_30"
                    android:background="@drawable/ic_contact_us"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/space_14"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/contact_us"
                    style="@style/TextBold18"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvPrivacy"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_56"
            android:layout_marginVertical="@dimen/small_space">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/space_30"
                    android:layout_height="@dimen/space_30"
                    android:background="@drawable/ic_privacy"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/space_14"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/privacy"
                    style="@style/TextBold18"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</layout>